# generate-srt

./: .gitignore  README.md  generate.py  optimize.py  pyproject.toml
archived/: main_v1.py  main_v2.py  main_v3.py  main_v4.py
output/: 20251116_C3817.srt  20251116_C3817_optimized.srt  20251116_C3817_report.md
