[project]
name = "generate-srt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "funasr>=1.3.0",
    "openai>=2.15.0",
    "python-dotenv>=1.2.1",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
]
